Improve styling-avoid main text to overlap

--- a/sass/themes/cr/2019/components/fixed-ratio-image/_fixed-ratio-image.scss
+++ b/sass/themes/cr/2019/components/fixed-ratio-image/_fixed-ratio-image.scss
@@ -33,6 +33,13 @@
             &__text-wrapper {
                 width: 50%;
             }
+
+            &__text-wrapper {
+                display: flex;
+                flex-flow: column;
+                justify-content: center;
+                align-items: center;
+            }
         }    
     }
 
